# DataSense

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_warehouse_supabase.py  e3bf8faa6f8c_initial_tables.py
backend/app/: config.py  main.py
backend/app/api/: auth.py  deps.py  organizations.py  router.py
backend/app/api/v1/: admin.py  auth.py  router.py  sources.py  warehouse.py
backend/app/core/: config.py  database.py  encryption.py  security.py  seed.py
backend/app/models/: __init__.py  audit.py  auth.py  base.py  organization.py  output.py  source.py  transformation.py  user.py  warehouse.py
backend/app/schemas/: __init__.py  auth.py  invitation.py  organization.py  source.py  user.py  warehouse.py
backend/app/services/: source.py  warehouse.py
docs/: 01_PRD_RESEARCH.md  02_TECH_STACK.md  03_ARCHITECTURE.md  04_IMPLEMENTATION_PHASES.md  05_DATABASE_ERD.md  06_TRANSFORMATION_UI.md  07_INGESTION_PLAN.md  08_SCALING_ARCHITECTURE.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/signup/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/onboarding/: page.tsx
frontend/src/components/: workspace.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
frontend/src/lib/: api.ts  auth-context.tsx  auth.tsx
