[project]
name = "datasense-backend"
version = "0.1.0"
description = "DataSense API backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.0",
]
